<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/change_your_password"
                android:textSize="@dimen/text_size_2" />

            <EditText
                android:id="@+id/txtCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_normal" />

            <EditText
                android:id="@+id/txtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_normal"/>

            <EditText
                android:id="@+id/txtConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_new_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_normal"/>

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_2" />

        </LinearLayout>
    </LinearLayout>
